syntax = "proto3";
package assetmantle.schema.data.base;

import "gogoproto/gogo.proto";
import "ids/base/hash_id.proto";
import "ids/base/string_id.proto";

message LinkedData {
  option (gogoproto.goproto_getters) = false;

  ids.base.HashID resource_i_d = 1;
  ids.base.StringID extension_i_d = 2;
  string service_endpoint = 3;
}